# eureka

./: install.py  pyproject.toml
src/eureka/: __main__.py
